modify mobile navbar icons to fix overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,15 @@ body {
     margin: -2rem;
 }
 
+.mobile-link {
+    color: black;
+    font-weight: 600;
+}
+
+.mobile-link:hover {
+    color: grey;
+}
+
 /* Products */
 
 .product-info {
